# python-cli-template

./: .gitignore  LICENSE  Makefile  Makefile.jinja  README.md  README.md.jinja  environment.yml  environment.yml.jinja  pyproject.toml  pyproject.toml.jinja
.github/workflows/: ci.yml
src/python_cli/: __init__.py  __init__.py.jinja  __main__.py  __main__.py.jinja  cli.py  cli.py.jinja
src/python_cli/modules/: __init__.py  __init__.py.jinja  example.py  example.py.jinja
tests/: test_cli.py  test_cli.py.jinja
